src/snapshots/antlr4_runtime__parser__tests__committed_left_recursive_depth_cap_keeps_listener_events_balanced.snap
---
source: src/parser.rs
expression: "(error.to_string(),\nevents.lock().expect(\"parse-listener event lock\").as_slice(),)"
---
(
    "parser error at 1:0: rule nesting depth limit of 1 exceeded",
    [
        "enter:0",
        "exit:0",
    ],
)
