src/snapshots/antlr4_runtime__parser__tests__committed_predicate_star_loop_uses_single_token_deletion.snap
---
source: src/parser.rs
expression: "*diagnostics.lock().expect(\"recorded diagnostics lock\")"
---
[
    RecordedDiagnostic {
        grammar_file_name: "Mini.g4",
        offending_text: Some(
            "x",
        ),
        line: 1,
        column: 0,
        span: None,
        message: "extraneous input 'x' expecting {<EOF>, 'x'}",
        error: None,
    },
]
