src/snapshots/antlr4_runtime__parser__tests__committed_walker_dispatches_recovery_diagnostics.snap
---
source: src/parser.rs
expression: "*diagnostics.lock().expect(\"recorded diagnostics lock\")"
---
[
    RecordedDiagnostic {
        grammar_file_name: "Mini.g4",
        offending_text: Some(
            "y",
        ),
        line: 1,
        column: 0,
        span: None,
        message: "extraneous input 'y' expecting <EOF>",
        error: None,
    },
]
