src/snapshots/antlr4_runtime__parser__tests__deferred_alternatives_preserve_left_recursive_contexts.snap
---
source: src/parser.rs
expression: contexts
---
[
    (
        0,
        0,
        6,
        "1+2",
    ),
    (
        0,
        0,
        1,
        "1",
    ),
]
