src/snapshots/antlr4_runtime__parser__tests__failed_interpreted_parse_notifies_error_listener.snap
---
source: src/parser.rs
expression: "*diagnostics.lock().expect(\"recorded diagnostics lock\")"
---
[
    RecordedDiagnostic {
        grammar_file_name: "Mini.g4",
        offending_text: Some(
            "y",
        ),
        line: 3,
        column: 5,
        message: "mismatched input 'y' expecting 'x'",
        error: Some(
            ParserError {
                line: 3,
                column: 5,
                message: "mismatched input 'y' expecting 'x'",
                offending: Some(
                    TokenId(
                        0,
                    ),
                ),
            },
        ),
    },
]
