src/snapshots/antlr4_runtime__parser__tests__fast_recognizer_preserves_labeled_left_recursive_operator_context.snap
---
source: src/parser.rs
expression: contexts
---
[
    (
        true,
        2,
        "a+b",
    ),
    (
        false,
        1,
        "a",
    ),
]
