src/snapshots/antlr4_runtime__parser__tests__parsed_file_exposes_all_buffered_tokens.snap
---
source: src/parser.rs
expression: "parsed.tokens().iter().map(|token|\n(token.token_type(), token.channel(), token.text())).collect::<Vec<_>>()"
---
[
    (
        99,
        1,
        Some(
            " comment",
        ),
    ),
    (
        1,
        0,
        Some(
            "x",
        ),
    ),
    (
        -1,
        0,
        Some(
            "<EOF>",
        ),
    ),
]
