src/snapshots/antlr4_runtime__parser__tests__private_context_alt_tracking_keeps_fast_predicate_recognition.snap
---
source: src/parser.rs
expression: "(root.alt_number(), root.context_alt_number(), root.text())"
---
(
    0,
    2,
    "x<EOF>",
)
